thing-2/ingress-routes-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-routes
spec:
  rules:
    - host: sandbox.demoriva.com
      http:
        paths:
          - path: /
            backend:
              serviceName: webserver-svc
              servicePort: 80
