thing-2/ingress-routes-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-routes
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - sandbox.demoriva.com
      secretName: tls-secret
  rules:
    - host: sandbox.demoriva.com
      http:
        paths:
          - path: /
            backend:
              serviceName: webserver-svc
              servicePort: 80
